[project]
name = "py-financas"
version = "0.1.0"
description = "Projeto de finanças pessoais em Python com PyQt5."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt5-qt5==5.15.2",
    "pyqt5==5.15.10",
    "pyqt5-sip==12.13.0",
    "sqlalchemy==2.0.28",
    "pyinstaller==6.5.0",
    "pyinstaller-hooks-contrib==2024.3",
    "moment==0.12.1",
    "openpyxl==3.1.2",
    "darkdetect==0.8.0",
    "black==24.4.2",
    "unidecode==1.3.8",
    "pytest==8.3.4",
]
[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.mypy]
mypy_path = "src"
