[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "py-financas"
version = "0.1.0"
description = "Projeto de finanças pessoais em Python com PyQt5."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt5-qt5==5.15.2",
    "pyqt5==5.15.10",
    "pyqt5-sip==12.13.0",
    "sqlalchemy==2.0.28",
    "moment==0.12.1",
    "openpyxl==3.1.2",
    "darkdetect==0.8.0",
    "black==24.4.2",
    "unidecode==1.3.8",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
]
[tool.flake8]
# H903  Windows style line endings not allowed in code
# E266 too many leading '#' for block comment
# D203 : One blank line required before class docstring
# H306  : imports not in alphabetical order
ignore = "H903, E266, D203, H306"
exclude = ".git,"
max-complexity = "10"
max_line_length = "120"

[tool.setuptools]
include-package-data = true
# [pycodestyle]
# count = False
# ignore = H903, E266, D203, H306
# max-line-length = 120
# statistics = True

[tool.ruff]
line-length = 120
indent-width = 4

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.mypy]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["moment.*", "openpyxl.*"]
follow_untyped_imports = true

[dependency-groups]
dev = [
    "pyinstaller==6.5.0",
    "pyinstaller-hooks-contrib==2024.3",
    "pytest>=8.3.4",
    "ruff>=0.11.13",
]

